# Project-3-COP3530

./: .gitattributes  CMakeLists.txt  README  README.md  launchscript.sh  main.cpp  main.py  readresults.cpp  readresults.h  searches.cpp  searches.h
gui/: CMakeLists.txt  README_GUI  builder.ui  example_main.cpp  gui.cpp  gui.h
